# shairport-mqtt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/toolchains/: mingw-w64-x86_64.cmake
include/shairport-mqtt/: mqtt_client.hpp  now_playing.hpp
scripts/: build.sh  imgui.ini  run-cli.sh  run-gui.sh  run.sh  setup-env.sh
src/: main.cpp
src/cli/: main.cpp
src/core/: mqtt_client.cpp  now_playing.cpp
src/gui/: main.cpp
